--- a/style.scss
+++ b/style.scss
@@ -170,7 +170,7 @@ body {
           border: 0.3px solid rgb(76, 79, 96);
           width: 100%;
           height: 460px;
-          background: center/ no-repeat;
+          background: contain/center no-repeat;
         }
       }
       .proDesc {
