--- a/threads.scss
+++ b/threads.scss
@@ -4,6 +4,32 @@
   font-weight: normal;
   padding-top: 20px;
 }
+#backBtn {
+  position: fixed;
+  top: 30px;
+  left: 30px;
+  background: #181817;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  transition: all 0.3s;
+  span {
+    scale: 1.1;
+    color: #ccc;
+    transform: translateX(0px);
+    transition: all 0.3s;
+  }
+  &:hover {
+    background: #f6f6f6;
+    span {
+      color: #000000;
+      transform: translateX(-8px);
+    }
+  }
+}
 #innerWrapp {
   width: 1024px;
   display: flex;
@@ -307,5 +333,296 @@
         font-size: 1rem;
       }
     }
+  }
+}
+#ia {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 40px 20px;
+}
+#styleguide {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 40px 20px;
+  .topwrapp {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+  }
+  .logowrapp {
+    width: 50%;
+    padding: 20px;
+    background: #fafafa;
+    border-radius: 16px;
+    .logoArea {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      padding: 120px 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  .colorWrapp {
+    width: 50%;
+    background: #fafafa;
+    border-radius: 16px;
+    .colorTitle {
+      padding: 20px 20px 6px;
+    }
+    .colors {
+      .color {
+        display: flex;
+        justify-content: space-between;
+        padding: 10px;
+        .code {
+          color: #9f9f9f;
+          font-size: 0.7rem;
+        }
+        .rgb {
+          color: #9f9f9f;
+          font-size: 0.7rem;
+        }
+        &:nth-child(1) {
+          background: #fafafa;
+        }
+        &:nth-child(2) {
+          background: #f3f5f7;
+        }
+        &:nth-child(3) {
+          background: #e9e9e9;
+        }
+        &:nth-child(4) {
+          background: #d2d3d3;
+        }
+        &:nth-child(5) {
+          background: #bababa;
+        }
+        &:nth-child(6) {
+          background: #4d4d4d;
+        }
+        &:nth-child(7) {
+          background: #181818;
+        }
+        &:nth-child(8) {
+          background: #000000;
+          border-radius: 0 0 16px 16px;
+        }
+      }
+    }
+  }
+  .typoWrapp {
+    width: 100%;
+    background: #fafafa;
+    border-radius: 16px;
+    .typoTitle {
+      padding: 20px 20px 0;
+    }
+    .extxtWrapp {
+      display: flex;
+      justify-content: space-around;
+      padding: 20px 0;
+      .extxt {
+        font-size: 0.7rem;
+        color: #b5b5b5;
+        letter-spacing: 3px;
+      }
+      .extxtko {
+        font-size: 0.7rem;
+        color: #b5b5b5;
+        letter-spacing: 0.6px;
+      }
+    }
+    .fontWrapp {
+      display: flex;
+      justify-content: space-between;
+      padding: 40px 20px;
+      .leftfont {
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+        .bigfont {
+          font-size: 5rem;
+          font-weight: 500;
+        }
+        .subfont {
+          font-size: 3rem;
+          color: #ccc;
+          font-weight: 500;
+        }
+      }
+      .rightfont {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        padding-right: 50px;
+        div {
+          font-size: 2.4rem;
+          &:nth-child(1) {
+            font-weight: bold;
+          }
+          &:nth-child(2) {
+            font-weight: 500;
+          }
+          &:nth-child(3) {
+            font-weight: 400;
+          }
+          &:nth-child(4) {
+            font-weight: 300;
+            color: #bbbbbb;
+          }
+        }
+      }
+    }
+  }
+}
+#bill {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  img {
+    width: 100%;
+  }
+}
+#wf {
+  padding: 40px 0;
+  width: 100%;
+  img {
+    width: 100%;
+  }
+}
+#ui {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 40px 20px;
+  .textWrapp {
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    .maintxt {
+      font-size: 1.8rem;
+      font-weight: 500;
+      line-height: normal;
+    }
+    .subtxt {
+      font-size: 0.8rem;
+      font-weight: 200;
+      color: #8f8f8f;
+    }
+  }
+  .onbording {
+    padding: 100px 0;
+    .onbordingImg {
+      padding: 40px 0;
+    }
+    img {
+      width: 100%;
+    }
+  }
+  .newfunction {
+    .functionWrapp {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-right: 40px;
+    }
+  }
+  .mainImg {
+    padding: 100px 0;
+    width: 100%;
+    justify-content: center;
+    display: flex;
+  }
+  .Modifying {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    .modiwrapp {
+      display: flex;
+      .modidesc {
+        width: auto;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+      }
+    }
+  }
+  .activity {
+    padding-top: 150px;
+    padding-bottom: 80px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .myPage {
+    padding-bottom: 150px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .pin {
+    padding: 80px 0;
+    display: flex;
+    flex-direction: column;
+    .pinContents {
+      padding-top: 80px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 40px;
+      div {
+        color: #4d4d4d;
+      }
+      img {
+        width: 60%;
+        height: 60%;
+      }
+    }
+  }
+  .dark {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    .darkContents {
+      display: flex;
+    }
+    .darkDesc {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      .darkImg {
+        padding-left: 30px;
+      }
+    }
+  }
+}
+#footer {
+  width: 100%;
+  padding: 160px 20px 60px;
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+  .footerInfo {
+    padding: 10px;
+    width: 100%;
+    font-size: 1rem;
+    font-weight: 500;
+    border-bottom: 1px solid #000;
   }
 }
