--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ body {
   border: 0.3px solid rgb(76, 79, 96);
   width: 100%;
   height: 460px;
-  background: center/no-repeat;
+  background: contain/center no-repeat;
 }
 #Infomation .infoContentsWrapp .infoContents .proDesc {
   margin-top: 12px;
